--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,8 @@
 @layer base {
   body {
     @apply font-[Poppins];
-    /* @apply bg-dark; */
+    @apply bg-dark
+    /* @apply bg-dark; */;
   }
 
   li {
