--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,8 @@
 @layer base {
   body {
     @apply font-[Poppins];
-    @apply bg-dark
-    /* @apply bg-dark; */;
+    @apply bg-dark;
+    @apply pt-[80px];
   }
 
   li {
